[fixes#73421764] override bootstrap navbar collapse breakpoint as screen-md-min (ie will collapse when screen width <992px)

--- a/app/assets/stylesheets/default/application.css.scss
+++ b/app/assets/stylesheets/default/application.css.scss
@@ -26,6 +26,8 @@
 // $light-orange: #ff8c00;
 // $navbar-default-color: $light-orange;
 
+$grid-float-breakpoint: 992px; //screen-md-min
+
 @import 'brand-lib';
 @import "bootstrap";
 @import "bootstrap/theme";
